<resources>
    <string name="app_name">AppListaCurso</string>
    <string name="txt_titulo">App Lista Vip Curso</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobre_nome">Sobre Nome</string>
    <string name="txt_hint_edit_nome_do_curso_desejado">Nome do Curso desejado</string>
    <string name="txt_hint_edit_telefone_do_contato">Telefone do Contato</string>
    <string name="txt_buttom_limpar">LIMPAR</string>
    <string name="txt_buttom_salvar">SALVAR</string>
    <string name="txt_buttom_finalizar">FINALIZAR</string>
</resources>