<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/txt_titulo"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPrimeiroNome"
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_primeiro_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <EditText
        android:id="@+id/editSobreNome"
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_sobre_nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPrimeiroNome" />

    <EditText
        android:id="@+id/editCurso"
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_nome_do_curso_desejado"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSobreNome" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/txt_hint_edit_telefone_do_contato"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCurso" />

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txt_buttom_limpar"
        app:layout_constraintEnd_toStartOf="@+id/buttonSalvar"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefone" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="64dp"
        android:text="@string/txt_buttom_salvar"
        app:layout_constraintBottom_toTopOf="@+id/buttonFinalizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelefone"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonFinalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/txt_buttom_finalizar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLimpar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>